# hawkeye-app

./: .gitignore  LICENSE  README.md  docker-compose.yml  package-lock.json  requirements.txt  q
.github/workflows/: main.yml
AI/: Dockerfile  app.py  ball_tracking.py  ball_tracking2.py  ball_tracking2_circle.py  ball_tracking2_circle2.py  ball_tracking2_prueba.py  ball_tracking2_zoom_prueba.py  ball_tracking2_zoom_prueba2.py  ball_tracking2_zoom_prueba3.py  ball_tracking3.py  ball_tracking4.py  ball_tracking4_guido.py  ball_tracking5.py  ball_tracking6.py  ball_tracking7.py  circulosIgnorarInkedInked.txt  cpplibrary.cpp  docker-compose.yml  greenTracker.py  greenTracker2.py  main.py  prueba.py  prueba2.py  regresion_cuadratica.py  requirements.txt  speedtest.py
AI/C++/: CMakeLists.txt  cpplibrary.cpp  main.cpp  test_py.cpp
AI/Python/: app.py  ball_tracking.py  ball_tracking2.py  ball_tracking2_cpp.py  ball_tracking2_timed.py  cpp_functions.py  prueba.py  prueba2.py  prueba3.py  prueba4.py  requirements.txt  speedtest.py  zoomear_video.py  (+1 more)
IA/: prueba_perspectiva.py
bluetooth_api/: bluetooth.js  index.html
front-end/: package-lock.json  package.json
gopro_api/: Dockerfile  app.py  gopro.py  requirements.txt
interest-web-app/: next-i18next.config.js  next.config.js  package-lock.json  package.json  tailwind.config.js
progressive-web-app/: .env  package-lock.json  package.json  tailwind.config.js
progressive_web_app/: .env.example  .eslintrc.cjs  .gitignore  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
(+129 files in other folders)
